HEAD:

	* Added support for MT-32 control ROM v.2.03.

2022-04-16:

	2.6.3 released.

	* To improve portability on some systems where multiple ABIs are supported with different
	  calling conventions (notably 32-bit Windows), all the public C functions now declare
	  the C calling convention explicitly, that makes a shared library build compatible with
	  a project who utilises another calling convention. (#89)
	* Function mt32emu_configure_midi_event_queue_sysex_storage from the C-compatible API
	  is now correctly exported in the declaration. Previously, it was only accessible when
	  building the library statically or via the plugin-like API. (#90)

2022-03-06:

	2.6.0 released.

	* Added support for three more control ROMs: MT-32 v.2.06, v.2.07 and CM-32LN v.1.00.
	* Improved CMake build script for mt32emu. Notably:
	  * The build script now populates the relevant library target properties, so that linking
	    the mt32emu target in a dependent project is sufficient for the build to succeed,
	    without necessity to use any extra variables.
	  * A complete CMake package with configuration, version and targets files is now installed
	    onto the target system. This package simplifies configuration of the other projects,
	    yet facilitates reliable builds with optional transitive library dependencies.
	  * Rewritten find-modules for libraries soxr and samplerate from scratch, so that they now
	    behave more uniformly yet can be used with added convenience.
	  * Updated the description of the module FindMT32EMU.cmake. It now creates the IMPORTED
	    target MT32Emu::mt32emu upon success, similarly to the other scripts. Note, this module
	    is not recommended for use with mt32emu version 2.6 and above. (#65)
	* Introduced display emulation support that goes beyond the existing low-level API intended
	  for retrieving the synth state details. The startup banner and the SysEx checksum error