@@ -3,6 +3,6 @@ set(munt_URL "http://munt.sourceforge.net/")
 set(munt_CONTACT "sergm@muntemu.org")
 
 set(munt_VERSION_MAJOR 2)
-set(munt_VERSION_MINOR 6)
-set(munt_VERSION_PATCH 2)
+set(munt_VERSION_MINOR 7)
+set(munt_VERSION_PATCH 0)
 set(munt_VERSION "${munt_VERSION_MAJOR}.${munt_VERSION_MINOR}.${munt_VERSION_PATCH}")
