@@ -3,6 +3,6 @@ set(libmt32emu_URL "http://munt.sourceforge.net/")
 set(libmt32emu_CONTACT "sergm@muntemu.org")
 
 set(libmt32emu_VERSION_MAJOR 2)
-set(libmt32emu_VERSION_MINOR 6)
-set(libmt32emu_VERSION_PATCH 3)
+set(libmt32emu_VERSION_MINOR 7)
+set(libmt32emu_VERSION_PATCH 0)
 set(libmt32emu_VERSION "${libmt32emu_VERSION_MAJOR}.${libmt32emu_VERSION_MINOR}.${libmt32emu_VERSION_PATCH}")
