@@ -24,8 +24,9 @@ extern "C" {
 
 MT32EMU_EXPORT_V(2.5) extern const volatile char mt32emu_2_5 = 0;
 MT32EMU_EXPORT_V(2.6) extern const volatile char mt32emu_2_6 = 0;
+MT32EMU_EXPORT_V(2.7) extern const volatile char mt32emu_2_7 = 0;
 
-#if MT32EMU_VERSION_MAJOR > 2 || MT32EMU_VERSION_MINOR > 6
+#if MT32EMU_VERSION_MAJOR > 2 || MT32EMU_VERSION_MINOR > 7
 #error "Missing version tag definition for current library version"
 #endif
 }
